# r-evm-verify

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURE_GAP.md  PRD.md  README.md  RESEARCH_PROPOSALS.md  plan.md
.github/workflows/: ci.yml
bench/: run_benchmark.sh
bench/boring-vault/: LiquidETH_accountant.hex  LiquidETH_vault.hex
bench/defivulnlabs/: DelegateCallVuln.hex  EtherStore.hex  SafeVault.hex  SelfDestructible.hex  TxOriginWallet.hex  UncheckedOverflow.hex  UnprotectedWithdraw.hex  contracts.sol  immunefi_ch1.hex  immunefi_ch1.sol  immunefi_ch2.hex  immunefi_ch2.sol
bench/dvdefi/: ClimberTimelock.hex  DamnValuableToken.hex  Exchange.hex  FlashLoanReceiver.hex  FreeRiderNFTMarketplace.hex  NaiveReceiverPool.hex  PuppetPool.hex  SelfAuthorizedVault.hex  SelfiePool.hex  ShardsNFTMarketplace.hex  SideEntranceLenderPool.hex  TheRewarderDistributor.hex  TrusterLenderPool.hex  UnstoppableVault.hex  WalletRegistry.hex
bench/halmos/src/: Bench1_SimpleOverflow.sol  Bench2_Reentrancy.sol  Bench3_ERC20.sol
bench/halmos/test/: Bench1_Test.sol  Bench3_Test.sol
bench/immunefi-top20/: 88mph.hex  DFXFinance.hex  Enzyme.hex  RESULTS.md  Sense.hex  Silo.hex  Wormhole.hex
bench/ipor/: AmmStorageUsdcProxy_impl.hex  AmmTreasuryUsdcProxy.hex  AmmTreasuryUsdcProxy_impl.hex  AmmTreasuryUsdtProxy_impl.hex  IporProtocolRouterProxy.hex  IporProtocolRouterProxy_impl.hex  ipUSDC.hex
bench/r-evm-verify/: ERC20.hex  Reentrancy.hex  SimpleOverflow.hex
bench/renegade/: Darkpool.hex  DarkpoolUniswapExecutor.hex  DarkpoolV2.hex  GasSponsor.hex  GasSponsorV2.hex  MalleableMatchConnector.hex  RESULTS.md  TransferExecutor.hex  VKeys.hex  Verifier.hex
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_tests.rs  integration_tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: algebraic.rs  inductive.rs  inference.rs  invariant.rs  lib.rs  pipeline.rs  prover.rs  summarizer.rs
crates/lifter/: Cargo.toml
crates/lifter/src/: abi.rs  cfg.rs  disasm.rs  ir.rs  lib.rs  lift.rs  opcodes.rs  selectors.rs  simplify.rs  storage.rs
crates/solver/: Cargo.toml
crates/solver/src/: context.rs  fastpath.rs  incremental.rs  lib.rs  translate.rs
crates/svm/: Cargo.toml
crates/svm/src/: call_dispatch.rs  exec.rs  lib.rs  properties.rs  state.rs  summary.rs  taint.rs
crates/synthesizer/: Cargo.toml
crates/synthesizer/src/: counterexample.rs  lib.rs  report.rs
docs/: inference_research.md  temporal_equilibrium.md  temporal_equilibrium_impact.md
tests/fixtures/: OverflowVulnerable.hex  OverflowVulnerable.sol  ReentrancyVulnerable.hex  ReentrancyVulnerable.sol  SafeVault.hex  SafeVault.sol  reentrancy_pattern.hex  simple_add.hex
tests/prove/: SimpleToken.json  SimpleToken.sol  UncheckedToken.json  UncheckedToken.sol
