[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GasWanted/r-evm-verify"

[workspace.dependencies]
# Internal crates
r-evm-verify-lifter = { path = "crates/lifter" }
r-evm-verify-svm = { path = "crates/svm" }
r-evm-verify-solver = { path = "crates/solver" }
r-evm-verify-engine = { path = "crates/engine" }
r-evm-verify-synthesizer = { path = "crates/synthesizer" }

# EVM
alloy-primitives = "0.8"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"

# SMT solver
z3 = { version = "0.12", features = ["static-link-z3"] }

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
miette = { version = "7", features = ["fancy"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
insta = { version = "1", features = ["glob"] }
assert_cmd = "2"
predicates = "3"
hex = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 1
