[package]
name = "r-evm-verify"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "r-evm-verify"
path = "src/main.rs"

[dependencies]
r-evm-verify-engine.workspace = true
r-evm-verify-lifter.workspace = true
clap.workspace = true
anyhow.workspace = true
miette.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile = "3"
