[package]
name = "r-evm-verify-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
r-evm-verify-lifter.workspace = true
r-evm-verify-svm.workspace = true
r-evm-verify-solver.workspace = true
r-evm-verify-synthesizer.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
z3.workspace = true

[dev-dependencies]
insta.workspace = true
hex.workspace = true
