[package]
name = "r-evm-verify-solver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
r-evm-verify-lifter.workspace = true
z3.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
hex.workspace = true
