[package]
name = "r-evm-verify-svm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
r-evm-verify-lifter.workspace = true
r-evm-verify-solver.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
hex.workspace = true
