[package]
name = "r-evm-verify-synthesizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
miette.workspace = true

[dev-dependencies]
insta.workspace = true
